--- a/QuizStreamAuswahl.html
+++ b/QuizStreamAuswahl.html
@@ -36,6 +36,10 @@ h1{text-align: center;}
   text-align: center;
 }
     </style>
+
+
+
+<?php ?>
 <head> <title>Formular One</title> <meta charset="utf-8"> </head>
 <body>
 
@@ -60,7 +64,7 @@ h1{text-align: center;}
 
 <!-- <form method="get" action="http://cbrell.de/bwi50205/172/ho976538/bmirechner2.php" enctype="multipart/form-data"> -->
   <!-- https://cbrell.de/bwi50205/172/op995204/QuizAuswertung.php -->
-<form method="get" action="https://cbrell.de/bwi50205/172/op995204/QuizAuswertung.php" enctype="multipart/form-data">
+<form method="get" action="https://cbrell.de/bwi50205/172/op995204/QuizAuswertung.php" enctype="multipart/form-data"> </form>
 <br> </br> Spiele Id bitte hier eingeben.
 <br> </br>
 <input type="text" name="spielId"
